@@ -1,4 +1,5 @@
 2.2.7
+ * Increase incoming socket timeout on sender during 2i/MV rebuild on receiver (CASSANDRA-8343)
  * cqlsh: correctly handle non-ascii chars in error messages (CASSANDRA-11626)
  * Exit JVM if JMX server fails to startup (CASSANDRA-11540)
  * Produce a heap dump when exiting on OOM (CASSANDRA-9861)
